--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1826,3 +1826,23 @@ div.rta__autocomplete.str-chat__emojisearch {
     display: none;
   }
 }
+
+input[type="file"] {
+  display: none;
+}
+
+.custom-file-upload {
+  /* border: 1px solid #ccc; */
+  /* width: 85%; */
+  /* display: inline-block; */
+  /* padding: 6px 12px; */
+  padding: 0.55rem 0.4rem;
+  border: 1px solid rgb(184, 196, 194);
+  border-radius: 4px;
+  font-size: 14px;
+  outline: none;
+  transition: all 150ms ease-in-out 0s;
+  width: 85%;
+  background: #fff;
+  cursor: pointer;
+}
