--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #005fff;
-  --primary-color-alpha: #005fff1a;
+  --primary-color: #FD841F;
+  --primary-color-alpha: #FD841F1a;
 }
 
 html,
@@ -27,7 +27,7 @@ body {
   justify-content: center;
 
   padding: 2rem;
-  background: #005fff;
+  background: #FD841F;
 }
 
 .auth__form-container_image {
@@ -101,8 +101,8 @@ body {
 
 .auth__form-container_fields-content_input input:focus,
 .auth__form-container_fields-content_input input:active {
-  box-shadow: 0px 0px 0px 1.5px #005fff;
-  border-color: #005fff;
+  box-shadow: 0px 0px 0px 1.5px #FD841F;
+  border-color: #FD841F;
 }
 
 .auth__form-container_fields-content_input-password {
@@ -120,8 +120,8 @@ body {
 
 .auth__form-container_fields-content_button button {
   border-radius: 4px;
-  background: #005fff;
-  border: 1px solid #005fff;
+  background: #FD841F;
+  border: 1px solid #FD841F;
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
@@ -1714,7 +1714,7 @@ div.rta__autocomplete.str-chat__emojisearch {
   display: none;
   height: 50px;
   width: 50px;
-  background: #005fff;
+  background: #FD841F;
   position: absolute;
   right: -2%;
   top: 50%;
